--- a/other/manual.tex
+++ b/other/manual.tex
@@ -25,7 +25,7 @@
    To run it you have to type: \textit{make clean}
    \end{itemize}
       \section{Executing}
-         After using the makefile to compile the wanted file an executable file with the same name will be generated.\\
+         After using the makefile to compile our files we can execute them.
             
    \begin{itemize}
            \item Execute the program that \textbf{compares two different documents using Jaccard Similarity}:
