--- a/other/manual.tex
+++ b/other/manual.tex
@@ -28,6 +28,10 @@
          After using the makefile to compile our files we can execute them.
             
    \begin{itemize}
+   
+   \item Execute the program where \textbf{you can try all of our implemented functionalities} by answering the questions that are prompted:
+   To run it you have to type: \textit{./mainDriver}
+   
            \item Execute the program that \textbf{compares two different documents using Jaccard Similarity}:
    To run it you have to type: \textit{./compjac}
   
@@ -46,8 +50,7 @@
       \item Execute the program that creates the data for our \textbf{k-shigles size} experiment:
    To run it you have to type: \textit{./jovProvesJaccard}
 
-   \item Execute the program where you can try all of our implemented functionalities by answering the questions that are prompted:
-   To run it you have to type: \textit{./mainDriver}
+   
       \end{itemize}
 \end{document}
 
