--- a/other/manual.tex
+++ b/other/manual.tex
@@ -39,9 +39,10 @@
    \item Execute the program that generates \textbf{permutations} of a file:
    To run it you have to type: \textit{./permutacions}
     
+    \item Execute the program that creates the data for our \textbf{k-shingles Size} experiment:
+   To run it you have to type: \textit{./jocProvesJaccard}
 \item Execute the program that creates the data for our \textbf{Performance of Different Hashing Algorithms} experiment:
    To run it you have to type: \textit{./jocProvesHashTimes}
-  
 \item Execute the program that creates the data for our \textbf{Performance of Different Document Similarity Approaches} experiment:
    To run it you have to type: \textit{./jocProvesJaccSimLsh}
    \item Execute the program that creates the data for our \textbf{Precision of Jaccard Similarity Approximations} experiment:
